package Fourmis;
import projet.v2.AntFacadeController;
import java.util.BitSet;

public class ControlFourmis implements AntFacadeController {
    @Override
    public void setParameters(int evaporationParam, int foodParam, int pheromoneParam) {

    }

    @Override
    public void createGrid(int width, int height) {

    }

    @Override
    public void putObstacle(int row, int column) {

    }

    @Override
    public void putFood(int row, int column, int quantity) {

    }

    @Override
    public void createColony(int row, int column) {

    }

    @Override
    public void createSoldiers(int amount) {

    }

    @Override
    public void createWorkers(int amount) {

    }

    @Override
    public void setAntFile(String antLogFile) {

    }

    @Override
    public BitSet[][] play(int duration, boolean record) {
        return new BitSet[0][];
    }
}
