package Fourmis;

public abstract class Fourmis {

    public abstract void move();

    public Noeud getPosition(){
        return new Noeud();
    }
    public void setPosition(Noeud noeud){

    }

}
