package Fourmis;

public class Noeud {

    public boolean isFree(){
        return true;
    }
}
