package Fourmis;

public class Soldat extends Fourmis{

    @Override
    public void move() {
        Noeud position = this.getPosition();

    }
}
