@startuml
'https://plantuml.com/sequence-diagram
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam circledCharacterRadius 0
skinparam circledCharacterFontSize 0
skinparam classFontStyle Bold
'autonumber

interface AntFacadeController<<interface>>{

}

class Graphe {

}
class Noeuds{
free:boolean
}

abstract Fourmi <<abstract>>{

}

class Reine extends Fourmi{
}
class Soldat extends Fourmi{
}

class ControlFourmi implements AntFacadeController{
}

Noeuds -> Noeuds : est voisin de >
ControlFourmi --> Graphe
ControlFourmi ---> Fourmi
Graphe --> Noeuds : composé de >
Fourmi  -> Noeuds : est sur le >

@enduml